manifests/tf-manager-web/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tf-manager-web
  namespace: xinfa
  labels:
    app: tf-manager-web
    tier: frontend
spec:
  selector:
    matchLabels:
      app: tf-manager-web
      tier: frontend
  template:
    metadata:
      labels:
        app: tf-manager-web
        tier: frontend
    spec:
      containers:
        - name: tf-manager-web
          image: git.caspen-tech.com:5050/jolly88-complex/frontend:tf-manager-web-1687167440 # {"$imagepolicy": "xinfa:tf-manager-web"}
          ports:
            - containerPort: 80
          imagePullPolicy: Always
          resources:
            requests:
              memory: 256Mi
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - tf-manager-web
              topologyKey: kubernetes.io/hostname
      imagePullSecrets:
        - name: gitlab-registry
