manifests/tf-manager-web/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tf-manager-web
  namespace: xinfa
  labels:
    app: tf-manager-web
    tier: frontend
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: tf-manager-web
    tier: frontend
