manifests/tf-manager-web/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tf-manager-web
  namespace: xinfa
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  tls:
    - hosts:
        - manager.fk9kumoco.com
      secretName: tf-manager-web
    - hosts:
        - manager.nxfxback.com
      secretName: tf-manager-web-nxfxback
  rules:
  - host: manager.fk9kumoco.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tf-manager-web
            port:
              number: 80
  - host: manager.nxfxback.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tf-manager-web
            port:
              number: 80
